# dictate

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  _config.yml  appcast.xml  index.html  install.sh
.github/workflows/: release-beta.yml  release.yml
Formula/: rcli-beta.rb  rcli.rb
app/RCLI/: Entitlements.plist  RCLIApp.swift
app/RCLI/Services/: EngineProviding.swift  EngineService+Actions.swift  EngineService+Models.swift  PermissionService.swift
app/RCLI/State/: AppState.swift  Types.swift
app/RCLI/Views/: MenuBarView.swift
app/Robin/Robin/: Info.plist  RobinApp.swift
app/Robin/Robin.xcodeproj/: project.pbxproj
app/Robin/Robin/Services/: ConfigService.swift  EngineService+Actions.swift  EngineService+Commands.swift  EngineService+Models.swift  EngineService+RAG.swift  EngineService+Voice.swift  EngineService.swift  HotkeyService.swift  ModelDownloadService.swift  OverlayService.swift  PermissionService.swift
app/Robin/Robin/State/: ConversationStore.swift  MetalRTSTTCatalog.swift  ModelCatalog.swift  Types.swift
app/Robin/Robin/Views/: HotkeyRecorder.swift  MenuBarView.swift  OnboardingView.swift  PanelView.swift  SettingsView.swift
app/Robin/Robin/Views/Settings/: ActionsSettingsView.swift  AdvancedSettingsView.swift  GeneralSettingsView.swift  HotkeysSettingsView.swift  ModelsSettingsView.swift
app/Robin/RobinTests/: ConfigServiceTests.swift  ModelCatalogTests.swift  RobinTests.swift
app/Robin/RobinUITests/: RobinUITests.swift  RobinUITestsLaunchTests.swift
docs/: release-workflow.md
docs/superpowers/plans/: 2026-03-16-rcli-app-plan1-foundation.md  2026-03-16-rcli-app-plan2-services.md  2026-03-16-rcli-app-plan3-ui-distribution.md  2026-03-17-models-view.md  2026-03-18-bluetooth-audio-hotswap.md  2026-03-18-stt-model-upgrade.md  2026-03-31-robin-app-distribution.md
docs/superpowers/specs/: 2026-03-16-rcli-app-ui-design-prompt.md  2026-03-16-rcli-macos-app-design.md  2026-03-17-models-view-design.md  2026-03-18-stt-model-upgrade-design.md  2026-03-31-robin-app-distribution-design.md
resources/: ai.runanywhere.rcli.dictate.plist
scripts/: build_xcframework.sh  codesign-rcli.sh  create_dmg.sh  download_models.sh  generate_icon.py  notarize.sh  package.sh  setup_metalrt.sh
src/actions/: action_helpers.h  action_registry.cpp  action_registry.h  app_control_actions.cpp  applescript_executor.cpp  browser_actions.cpp  clipboard_actions.cpp  communication_actions.cpp  communication_actions.h  files_actions.cpp  media_actions.cpp  messages_actions.cpp  navigation_actions.cpp  notes_actions.cpp  register_all.cpp  reminders_actions.cpp  system_actions.cpp  web_actions.cpp  window_actions.cpp
src/api/: rcli_api.cpp  rcli_api.h
src/audio/: audio_io.cpp  audio_io.h  mic_permission.h  mic_permission.mm  rcli_overlay.m
src/bench/: benchmark.cpp  benchmark.h
src/bridge/: rcli_caret_bridge.h  rcli_caret_bridge.mm  rcli_hotkey_bridge.h  rcli_hotkey_bridge.mm  rcli_overlay_bridge.h  rcli_overlay_bridge.mm  rcli_paste_bridge.h  rcli_paste_bridge.mm
src/cli/: cli_common.h  cmd_dictate.cpp  cmd_dictate.h  help.h  main.cpp  metalrt_beast_mode.h  model_pickers.h  setup_cmds.h  tui_app.h  tui_dashboard.h
src/core/: constants.h  log.h  personality.h  types.h
src/dictate/: caret_position.h  caret_position.mm  daemon.h  daemon.mm  dictate_config.h  hotkey_listener.h  hotkey_listener.mm  overlay.h  overlay.mm  paste_engine.h  paste_engine.mm
src/engines/: llm_engine.cpp  llm_engine.h  metalrt_engine.cpp  metalrt_engine.h  metalrt_loader.cpp  metalrt_loader.h  metalrt_stt_engine.cpp  metalrt_stt_engine.h  metalrt_tts_engine.cpp  metalrt_tts_engine.h  model_profile.cpp  model_profile.h  stt_engine.cpp  stt_engine.h  tts_engine.cpp  tts_engine.h
src/models/: model_registry.h  stt_model_registry.h  tts_model_registry.h
src/pipeline/: orchestrator.cpp  orchestrator.h  text_sanitizer.h  wake_word_detector.h
src/test/: test_pipeline.cpp
src/tools/: tool_defs.h  tool_engine.cpp  tool_engine.h
tests/: test_caret_position.mm  test_daemon.cpp  test_dictate_config.cpp  test_paste_engine.mm
